--- a/cluster/talos/nodes/control01.yaml.j2
+++ b/cluster/talos/nodes/control01.yaml.j2
@@ -11,6 +11,7 @@ apiVersion: v1alpha1
 kind: UserVolumeConfig
 name: local-hostpath
 provisioning:
+  maxSize: 2TB
   diskSelector:
     match: disk.dev_path == "/dev/nvme1n1" && !system_disk # TODO: use model instead of dev_path
 ---
