--- a/cluster/talos/nodes/control01.yaml.j2
+++ b/cluster/talos/nodes/control01.yaml.j2
@@ -11,9 +11,10 @@ apiVersion: v1alpha1
 kind: UserVolumeConfig
 name: local-hostpath
 provisioning:
-  maxSize: 2TB
+  minSize: 1TB
+  grow: true
   diskSelector:
-    match: disk.dev_path == "/dev/nvme1n1" && !system_disk # TODO: use model instead of dev_path
+    match: disk.dev_path == "/dev/nvme0n1" && !system_disk # TODO: use model instead of dev_path
 ---
 apiVersion: v1alpha1
 kind: HostnameConfig
